--- a/app/views/about/entries.html.slim
+++ b/app/views/about/entries.html.slim
@@ -24,7 +24,7 @@
 
   .w3-row
 
-    #page1.w3-col.s12[data-target="aboutPager.page"]
+    #page1.w3-col.s12[data-aboutPager-target="page"]
       .w3-row
 
         .w3-col.s6
@@ -47,7 +47,7 @@
 
            
         
-    #page2.w3-col.s12.w3-hide[data-target="aboutPager.page"]
+    #page2.w3-col.s12.w3-hide[data-aboutPager-target="page"]
       .w3-row
         .w3-col.s6
           h6.strong Entry Section
@@ -64,7 +64,7 @@
               |The Numb field in the Entry line (first line with Date) is historically used for a check number. You can use the += or the _- key to increment or decrement a Numb, or increment/decrement the last number entered in that field. Since I do a lot of debit card or web transactions, it has been expanded to include a key and a number. 'c2845' could represent a check number and 'w88' could represent a web transaction. As in GnuCash, there are no checks on the field, you can have duplicates.
 
 
-    #page3.w3-col.s12.w3-hide[data-target="aboutPager.page"]
+    #page3.w3-col.s12.w3-hide[data-aboutPager-target="page"]
       .w3-row
         .w3-col.s6
           h6.strong Entry Splits Section 
@@ -102,7 +102,3 @@
                 li Whew!
        
 
-
-      
-    / #page4.w3-col.s12[data-target="aboutPager.page"]
-    /   p page4
