--- a/app/views/about/reports.html.slim
+++ b/app/views/about/reports.html.slim
@@ -1,6 +1,6 @@
 #about.w3-container.w3-white.min-height.about
   .w3-row[data-controller="aboutPager"]
-    #page1.w3-col.s10[data-target="aboutPager.page"]
+    #page1.w3-col.s10[data-aboutPager-target="page"]
 
       h5.strong About Reports
       = image_tag('reports.png',class:'image-fit')
