--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -1,4 +1,4 @@
-div[data-controller="blueBackground"]
+ediv[data-controller="blueBackground"]
 .w3-row[data-controller="entryLedger"]
   .w3-col.s2
     h5.strong = header
@@ -14,10 +14,10 @@ div[data-controller="blueBackground"]
         span.w3-right Entry Has FitID
 
   .w3-row
-    = form_with model: @entry, data:{target:"entryLedger.theForm",action:'  keypress->entryLedger#preventSubmit'} do |f|
+    = form_with model: @entry, data:{entryLedger_target:'theForm',action:'  keypress->entryLedger#preventSubmit'} do |f|
       
       - if @entry.errors.any?
-        #error_explanation[data-target="entryLedger.errors"]
+        #error_explanation[data-entryLedger-target='errors']
           h2 = "#{pluralize(@entry.errors.count, "error")} prohibited this entry from being saved:"
           ul
             - @entry.errors.full_messages.each do |message|
@@ -41,50 +41,50 @@ div[data-controller="blueBackground"]
               td.strong.wp9 Decrease
           tbody id="entry"
             tr.entry-row
-              td = f.text_field(:post_date,class:'w8',data:{controller:'flatpickr',action:"change->entryLedger#changed",target:'entryLedger.date'})
-              td = f.text_field(:numb,class:'w5',data:{target:'autoNumber.numb',action:'keydown->autoNumber#keyDown'})
-              td = f.text_area(:description,class:"w22",data:{target:'entryLedger.description',action:"change->entryLedger#changed"})
+              td = f.text_field(:post_date,class:'w8',data:{controller:'flatpickr',action:"change->entryLedger#changed",entryLedger_target:'date'})
+              td = f.text_field(:numb,class:'w5',data:{autoNumber_target:'numb',action:'keydown->autoNumber#keyDown'})
+              td = f.text_area(:description,class:"w22",data:{entryLedger_target:'description',action:"change->entryLedger#changed"})
               td = f.hidden_field(:fit_id) + content_tag(:div,"Accounts name are in reverse hierarchical order. Select a pulldown and start typing to lookup a name!",class:"annotate")
               td
               td
               td
-          tbody[data-target="entryLedger.splitsTbody"]
+          tbody[data-entryLedger-target='splitsTbody']
             - rid = 0
             = f.fields_for :splits do |f|
               tr[id="split_#{rid}"]
                 - if f.object.id.present?
                   td 
                     = f.hidden_field(:id) 
-                    = f.check_box(:_destroy,class:'s-delete',data:{target:"entryLedger.deletes",
+                    = f.check_box(:_destroy,class:'s-delete',data:{entryLedger_target:'deletes',
                       action:"click->entryLedger#deleteRow"})
                     i.fas.fa-minus-square Del
                 - else
                   td 
                     = f.hidden_field(:id)
-                    span[data-target="entryLedger.deletes"]
+                    span[data-entryLedger-target='deletes']
                       i.fas.fa-cut[data-action="click->entryLedger#cutRow"] 
                 td = f.text_field(:action,class:'w5')
                 td = f.text_field(:memo,class:'w22')
                 td = f.select(:account_id,options_for_select(current_book.settings[:acct_sel_opt_rev],
                   selected: f.object.account_id,disabled:current_book.settings[:dis_opt],include_blank: ''),
-                  {},class:'w3-select',dir:"ltr",data:{target:'entryLedger.transfer',
+                  {},class:'w3-select',dir:"ltr",data:{entryLedger_target:'transfer',
                   action:"change->entryLedger#changed"})
                 td 
                   span[data-action='click->entryLedger#reconcile'] = (f.object.reconcile_state ||='n')
                   div = f.hidden_field(:reconcile_state,value:f.object.reconcile_state ||='n', class:'w1 w3-hide')
                 td = f.text_field(:debit,value:Ledger.to_fixed(f.object.debit),class:'w8 w3-right-align',
-                data:{target:"entryLedger.debit",action:"click->entryLedger#selectit change->entryLedger#changed" })
+                data:{entryLedger_target:'debit',action:"click->entryLedger#selectit change->entryLedger#changed" })
                 td = f.text_field(:credit,value:Ledger.to_fixed(f.object.credit),class:'w8  w3-right-align',
-                data:{target:"entryLedger.credit",action:"click->entryLedger#selectit change->entryLedger#changed"})
-                td.w3-hide = f.hidden_field(:amount,class:'',data:{target:"entryLedger.amount"})
+                data:{entryLedger_target:'credit',action:"click->entryLedger#selectit change->entryLedger#changed"})
+                td.w3-hide = f.hidden_field(:amount,class:'',data:{entryLedger_target:'amount'})
               - rid += 1
         hr.underline
         div style="float:right;"
-          span.balanced[data-target="entryLedger.balanced"] Start
+          span.balanced[data-entryLedger-target='balanced'] Start
         - if @entry.reconciled?
           h4.strong.w3-text-red Entry has been reconciled and can't be changed. Use a transfer entry if there was a problem/mistake
         - else
-          button.w3-red.w3-large.w3-disabled.w3-round.w3-padding.strong.w3-margin-top[data-target="entryLedger.submit" data-action="click->entryLedger#submitForm" disabled="disabled"] = "#{action_name == 'edit' ? 'Update' : 'Create'} Entry"
-        #last_numbers[data-target="autoNumber.last_numbers" data-numbers="#{current_book.last_numbers.to_json}"]
+          button.w3-red.w3-large.w3-disabled.w3-round.w3-padding.strong.w3-margin-top[data-entryLedger-target='submit' data-action="click->entryLedger#submitForm" disabled="disabled"] = "#{action_name == 'edit' ? 'Update' : 'Create'} Entry"
+        #last_numbers[data-autoNumber-target='last_numbers' data-numbers="#{current_book.last_numbers.to_json}"]
   
       
