--- a/app/views/ofxes/show.html.slim
+++ b/app/views/ofxes/show.html.slim
@@ -1,31 +1,35 @@
 .w3-container.w3-white.min-height
   .w3-row-padding-x
     #ledger.cell[data-controller="ofx"]
-      / #btModal.reveal data-reveal="" 
-      /   p If your recongnize the Entry as a reapeating Entry, select a matching name in the folloing pulldown and click the Duplicate Match button and it will duplicate that transaction with the information from the bank statement.
-      /   button.close-button aria-label=("Close modal") data-close="" type="button" 
-      /     span aria-hidden="true"  &times;
-      /   = form_with url: search_ofx_path(1), method: :patch
-      /     = select_tag "search",options_for_select(@ofx.dup_entries),prompt:'Select'
-      /     = hidden_field_tag :entry_id, 1
-      /     = hidden_field_tag :fit_id, ''
-      /     button#submit_ofx_search_tag Duplicate Match
-      / button.w3-button.w3-black onclick="document.getElementById('id01').style.display='block'"  Open Modal
-      #id01.w3-modal[data-target="ofx.modal"]
+
+      #id01.w3-modal[data-ofx-target="modal"]
         .w3-modal-content.w3-card-4
           header.w3-container.w3-teal
             span.w3-button.w3-display-topright onclick="document.getElementById('id01').style.display='none'"  &times;
             h2 About OFX Bank Transaction
           .w3-container
             p If your recongnize the Entry as a reapeating Entry, search for a matching name in the following search field and click the Duplicate Match button and it will duplicate a new Entry with the information from the bank statement. You can then save the Entry if it validates. You can also Cancel the Entry if you picked the wrong match.
-            div.w3-left[data-controller="autocomplete" 
-               data-autocomplete-url="/entries/auto_search" data-autocomplete-min-length="2"]
-               input[type="text" data-target="autocomplete.input" placeholder="Entry Description Search" data-action="change->ofx#showSearched" style="width:300px;margin-right:8px;"]
-               input[type="hidden" name="entry_id" data-target="autocomplete.hidden ofx.hidden" ]
-               input[type="hidden" name="fit_id" data-target="ofx.fitID" ]
+            div.w3-left[
+              data-controller="autocomplete" 
+              data-autocomplete-url="/entries/auto_search" 
+              data-autocomplete-min-length="2"
+              ]
+              input[type="text" 
+                data-autocomplete-target="input" 
+                placeholder="Entry Description Search" 
+                data-action="change->ofx#showSearched" 
+                style="width:300px;margin-right:8px;"]
+              input[type="hidden" name="entry_id" 
+                data-autocomplete-target="hidden" 
+                data-ofx-target="hidden" ]
+              input[type="hidden" name="fit_id" data-ofx-target="fitID" ]
 
-               .w3-right.lime-link-button.w3-hide[data-target="ofx.showButton" data-action="click->ofx#dupSearched" data-entryID="" data-fitID=""] Duplicate Match
-               ul.w3-ul.w3-border[data-target="autocomplete.results"]
+
+              .w3-right.lime-link-button.w3-hide[
+              data-ofx-target="showButton" 
+              data-action="click->ofx#dupSearched" 
+              data-entryID="" data-fitID=""] Duplicate Match
+              ul.w3-ul.w3-border[data-autocomplete-target="results"]
 
           footer.w3-container.w3-teal
             p Modal Footer
