--- a/app/views/vfw/deposits/edit_other.html.slim
+++ b/app/views/vfw/deposits/edit_other.html.slim
@@ -17,7 +17,7 @@
         .s3.w3-col
           h6.strong Total Other Revenue
         .s2.w3-col
-          = text_field_tag :total_other_revenue, nil, disabled:true, class:'w10',data:{target:'deposit.otherSum'}
+          = text_field_tag :total_other_revenue, nil, disabled:true, class:'w10',data:{deposit:'target.otherSum'}
       .w3-row.w3-margin.bpad4
         .m1.s12.w3-col.padb-4
           strong Delete
@@ -37,7 +37,7 @@
           .m2.samll-12.w3-col.padb-4
             = d.select :item, options_for_select(Vfw::OtherRevenue.items_select,d.object.item)
           .m2.samll-12.w3-col.padb-4
-            = d.text_field :amount, class: 'other-revenue-amount w10',data:{target:'deposit.otherRevenue',action:'change->deposit#otherChange'}
+            = d.text_field :amount, class: 'other-revenue-amount w10',data:{deposit:'target.otherRevenue',action:'change->deposit#otherChange'}
           .m3.samll-12.w3-col.padb-4
             = d.text_field :remarks, class: :bpad4
 
