--- a/app/views/vfw/sales_items/beer_inventory.html.slim
+++ b/app/views/vfw/sales_items/beer_inventory.html.slim
@@ -1,6 +1,6 @@
 .w3-container.w3-white.min-height
   /p = @inv.inspect
-  = form_with url: beer_update_vfw_sales_items_path,method: :patch,data:{controller:'inventory',target:'inventory.beer'} do |form|
+  = form_with url: beer_update_vfw_sales_items_path,method: :patch,data:{controller:'inventory',inventory_target:'beer'} do |form|
     div.noprint
       button.noprint = form.submit
       = link_to "Cancel", vfw_sales_items_path, class:'cancel-button noprint indent'
@@ -28,18 +28,18 @@
           td
             = item.alert
             = hidden_field_tag("[beer][#{item.id}][alert]",item.alert)
-          td= text_field_tag("[beer][#{item.id}][size]",item.size, data:{target:'inventory.size',action:'change->inventory#updateBeer'},style:'width:100px;', class:'tright')
+          td= text_field_tag("[beer][#{item.id}][size]",item.size, data:{inventory_target:'size',action:'change->inventory#updateBeer'},style:'width:100px;', class:'tright')
           td= select_tag("[beer][#{item.id}][cases]",options_for_select((0..15).to_a,item.cases),include_blank:true,
-            data:{target:'inventory.cases',action:'change->inventory#updateBeer'})
+            data:{inventory_target:'cases',action:'change->inventory#updateBeer'})
           td
             = select_tag("[beer][#{item.id}][bottles_1]",options_for_select((0..24).to_a,item.bottles_1),include_blank:true,
-             data:{target:'inventory.wbottles' ,action:'change->inventory#updateBeer'})
+             data:{inventory_target:'wbottles' ,action:'change->inventory#updateBeer'})
           td
             = select_tag("[beer][#{item.id}][bottles_2]",options_for_select((0..24).to_a,item.bottles_2),include_blank:true,
-             data:{target:'inventory.cbottles' ,action:'change->inventory#updateBeer'})
-          td= text_field_tag("[beer][#{item.id}][bottles]",item.bottles,data:{target:'inventory.bottles'},style:'width:100px;', class:'tright')
-          td= text_field_tag("[beer][#{item.id}][total]",item.total,data:{target:'inventory.total'},style:'width:100px;', class:'tright')
+             data:{inventory_target:'cbottles' ,action:'change->inventory#updateBeer'})
+          td= text_field_tag("[beer][#{item.id}][bottles]",item.bottles,data:{inventory_target:'bottles'},style:'width:100px;', class:'tright')
+          td= text_field_tag("[beer][#{item.id}][total]",item.total,data:{inventory_target:'total'},style:'width:100px;', class:'tright')
 
-          td= check_box_tag("[ckd]",0,false,data:{target:'inventory.ckd'})
+          td= check_box_tag("[ckd]",0,false,data:{inventory_target:'ckd'})
 
 
