--- a/app/views/vfw/sales_items/beer_print.html.slim
+++ b/app/views/vfw/sales_items/beer_print.html.slim
@@ -27,17 +27,17 @@
           td
             = item.alert
             = hidden_field_tag("[beer][#{item.id}][alert]",item.alert)
-          td= text_field_tag("[beer][#{item.id}][size]",item.size, data:{target:'inventory.size',action:'change->inventory#updateBeer'},style:'width:100px;', class:'tright')
+          td= text_field_tag("[beer][#{item.id}][size]",item.size, data:{inventory:'target.size',action:'change->inventory#updateBeer'},style:'width:100px;', class:'tright')
           td= text_field_tag("[beer][#{item.id}][cases]",nil,
-            data:{target:'inventory.cases',action:'change->inventory#updateBeer'})
+            data:{inventory:'target.cases',action:'change->inventory#updateBeer'})
           td
             = text_field_tag("[beer][#{item.id}][bottles_1]",nil,
-             data:{target:'inventory.wbottles' ,action:'change->inventory#updateBeer'})
+             data:{inventory:'target.wbottles' ,action:'change->inventory#updateBeer'})
           td
             = text_field_tag("[beer][#{item.id}][bottles_2]",nil,
-             data:{target:'inventory.cbottles' ,action:'change->inventory#updateBeer'})
+             data:{inventory:'target.cbottles' ,action:'change->inventory#updateBeer'})
 
-          td= text_field_tag("[beer][#{item.id}][total]",item.total,data:{target:'inventory.total'},style:'width:100px;', class:'tright')
-          td= check_box_tag("[ckd]",0,false,data:{target:'inventory.ckd'})
+          td= text_field_tag("[beer][#{item.id}][total]",item.total,data:{inventory:'target.total'},style:'width:100px;', class:'tright')
+          td= check_box_tag("[ckd]",0,false,data:{inventory:'target.ckd'})
 
 
