--- a/app/views/vfw/sales_items/liquor_inventory.html.slim
+++ b/app/views/vfw/sales_items/liquor_inventory.html.slim
@@ -15,8 +15,10 @@
         th Percent
         th Total
         th &#10003;
+      - idx = -1
       - @liquor.each do |item|
-        tr
+        - idx += 1
+        tr[data-idx="#{idx}"]
           td = item.name
           td
             = item.quanity
@@ -24,16 +26,16 @@
           td
             = item.alert
             = hidden_field_tag("[liquor][#{item.id}][alert]",item.alert)
-          td= text_field_tag("[liquor][#{item.id}][size]",item.size, data:{target:'inventory.size',action:'change->inventory#updateLiquor'},style:'width:100px;', class:'tright')
+          td= text_field_tag("[liquor][#{item.id}][size]",item.size, data:{inventory_target:'size',action:'change->inventory#updateLiquor'},style:'width:100px;', class:'tright')
           td= select_tag("[liquor][#{item.id}][bottles]",options_for_select((0..12).to_a,item.bottles),include_blank:true,
-            data:{target:'inventory.bottles',action:'change->inventory#updateLiquor'})
+            data:{inventory_target:'bottles',action:'change->inventory#updateLiquor'})
           td
             - opt = []
             - 0.step(100,5){|x| opt << x}
             = select_tag("[liquor][#{item.id}][percent]",options_for_select(opt,item.percent),include_blank:true,
-             data:{target:'inventory.percent' ,action:'change->inventory#updateLiquor'})
+             data:{inventory_target:'percent' ,action:'change->inventory#updateLiquor'})
 
-          td= text_field_tag("[liquor][#{item.id}][total]",item.total,data:{target:'inventory.total'},style:'width:100px;', class:'tright')
-          td= check_box_tag("[ckd]",0,false,data:{target:'inventory.ckd'})
+          td= text_field_tag("[liquor][#{item.id}][total]",item.total,data:{inventory_target:'total'},style:'width:100px;', class:'tright')
+          td= check_box_tag("[ckd]",0,false,data:{inventory_target:'ckd'})
 
 
