--- a/app/views/vfw/sales_items/liquor_print.html.slim
+++ b/app/views/vfw/sales_items/liquor_print.html.slim
@@ -24,16 +24,16 @@
           td
             = item.alert
             = hidden_field_tag("[liquor][#{item.id}][alert]",item.alert)
-          td= text_field_tag("[liquor][#{item.id}][size]",item.size, data:{target:'inventory.size',action:'change->inventory#updateLiquor'},style:'width:100px;', class:'tright')
+          td= text_field_tag("[liquor][#{item.id}][size]",item.size, data:{inventory:'target.size',action:'change->inventory#updateLiquor'},style:'width:100px;', class:'tright')
           td= text_field_tag("[liquor][#{item.id}][bottles]",nil,
-            data:{target:'inventory.bottles',action:'change->inventory#updateLiquor'})
+            data:{inventory:'target.bottles',action:'change->inventory#updateLiquor'})
           td
             - opt = []
             - 0.step(100,5){|x| opt << x}
             = text_field_tag("[liquor][#{item.id}][percent]",nil,
-             data:{target:'inventory.percent' ,action:'change->inventory#updateLiquor'})
+             data:{inventory:'target.percent' ,action:'change->inventory#updateLiquor'})
 
-          td= text_field_tag("[liquor][#{item.id}][total]",item.total,data:{target:'inventory.total'},style:'width:100px;', class:'tright')
-          td= check_box_tag("[ckd]",0,false,data:{target:'inventory.ckd'})
+          td= text_field_tag("[liquor][#{item.id}][total]",item.total,data:{inventory:'target.total'},style:'width:100px;', class:'tright')
+          td= check_box_tag("[ckd]",0,false,data:{inventory:'target.ckd'})
 
 
