puma and autocomplete not updated

--- a/app/views/welcome/home.html.slim
+++ b/app/views/welcome/home.html.slim
@@ -29,4 +29,5 @@
       li Requires a server, either local, virtual, or cloud based (I've run it on a $35 RaspberryPI!)
       li Requires some Technical skills to setup and maintain.
       li ?
+    .annotate Rails Version 6.1.3
 
