turn on rails 6.1.3 upgrade all, type

--- a/app/views/welcome/home.html.slim
+++ b/app/views/welcome/home.html.slim
@@ -11,7 +11,7 @@
     p For more details on RBooks, visit the About pages.
     = link_to "About", about_about_path, class:'action-button'
 
-    .strong Disclaimer. I am not and Account or a Programmer, but I've written programs since the early 70's. Most of my applications are for self use. I decided to share RBooks if anyone is interested. This is about my 3rd version and has gone through an extensive re-write. There are no Tests, other than how I've tested for the last 40 years!
+    .strong Disclaimer. I am not and Accountant or a Programmer, but I've written programs since the early 70's. Most of my applications are for self use. I decided to share RBooks if anyone is interested. This is about my 3rd version and has gone through an extensive re-write. There are no Tests, other than how I've tested for the last 40 years!
 
 
 
