--- a/app/views/welcome/home.html.slim
+++ b/app/views/welcome/home.html.slim
@@ -30,4 +30,4 @@
       li Requires some Technical skills to setup and maintain.
       li ?
     .annotate Rails Version 6.1.3
-
+    .annotate TEST puma:reload
